<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">环保随手拍</string>
    <string name="hello">Hello World, Text4Activity!</string>
	<string name="bottom_tab_map">污染地图</string>
	<string name="bottom_tab_camera">拍照上传</string>
	<string name="bottom_tab_myspace">畅所欲言</string>
	
	

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bottom_tab_know"></string>
    <string name="bottom_tab_wantknow">拍照上传</string>
    <string name="bottom_tab_my">周边污染</string>
    <string name="bottom_tab_shezhi">个人中心</string>
    
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号:</string>
    <string name="strPswInputLabel">密码:</string>
    <string name="login">登 录</string>
    <string name="register">注册</string>
    <string name="cancle">取消</string>


    
</resources>
